{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 18,
  "lineage": "a32d5866-9bec-d938-750a-a1c4ea10f3e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aaad63344dcce567",
            "association_id": "eipassoc-00cc8890e4c9f9782",
            "domain": "vpc",
            "id": "eipalloc-0aaad63344dcce567",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ea8eb8493bc7328b",
            "private_dns": "ip-192-168-50-91.ec2.internal",
            "private_ip": "192.168.50.91",
            "public_dns": "ec2-54-172-98-190.compute-1.amazonaws.com",
            "public_ip": "54.172.98.190",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177300752486:internet-gateway/igw-07bc9584d69c375a0",
            "id": "igw-07bc9584d69c375a0",
            "owner_id": "177300752486",
            "vpc_id": "vpc-0cb3e982b75484576"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aaad63344dcce567",
            "association_id": "eipassoc-00cc8890e4c9f9782",
            "connectivity_type": "public",
            "id": "nat-0c7511e4bb0088814",
            "network_interface_id": "eni-0ea8eb8493bc7328b",
            "private_ip": "192.168.50.91",
            "public_ip": "54.172.98.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-046615590a9ceacdd",
            "tags": {
              "Name": "cloudbooks-nat-gateway"
            },
            "tags_all": {
              "Name": "cloudbooks-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177300752486:route-table/rtb-029bc380ac79c40c3",
            "id": "rtb-029bc380ac79c40c3",
            "owner_id": "177300752486",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7511e4bb0088814",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb3e982b75484576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.this",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177300752486:route-table/rtb-0ec83c51b0a966020",
            "id": "rtb-0ec83c51b0a966020",
            "owner_id": "177300752486",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bc9584d69c375a0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb3e982b75484576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a30c85a9f12e0d9",
            "route_table_id": "rtb-029bc380ac79c40c3",
            "subnet_id": "subnet-06c81d56636bc07fe"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.this",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052e10f4578cd7773",
            "route_table_id": "rtb-029bc380ac79c40c3",
            "subnet_id": "subnet-06a4e76b6877c5e07"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.this",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084a35d99359a9b30",
            "route_table_id": "rtb-0ec83c51b0a966020",
            "subnet_id": "subnet-046615590a9ceacdd"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055383403978a77c9",
            "route_table_id": "rtb-0ec83c51b0a966020",
            "subnet_id": "subnet-0925bfb78be896af7"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177300752486:subnet/subnet-06c81d56636bc07fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c81d56636bc07fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177300752486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "SubnetType": "Private"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "SubnetType": "Private"
            },
            "vpc_id": "vpc-0cb3e982b75484576"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177300752486:subnet/subnet-06a4e76b6877c5e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a4e76b6877c5e07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177300752486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2",
              "SubnetType": "Private"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "SubnetType": "Private"
            },
            "vpc_id": "vpc-0cb3e982b75484576"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177300752486:subnet/subnet-046615590a9ceacdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046615590a9ceacdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177300752486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "SubnetType": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "SubnetType": "Public"
            },
            "vpc_id": "vpc-0cb3e982b75484576"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177300752486:subnet/subnet-0925bfb78be896af7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0925bfb78be896af7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177300752486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2",
              "SubnetType": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "SubnetType": "Public"
            },
            "vpc_id": "vpc-0cb3e982b75484576"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177300752486:vpc/vpc-0cb3e982b75484576",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-053cfe78183b458a6",
            "default_route_table_id": "rtb-0c9450e4b05af99fc",
            "default_security_group_id": "sg-0b014acfb10c46af3",
            "dhcp_options_id": "dopt-95290bef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb3e982b75484576",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c9450e4b05af99fc",
            "owner_id": "177300752486",
            "tags": {
              "Name": "cloudbooks-vpc"
            },
            "tags_all": {
              "Name": "cloudbooks-vpc"
            }
          }
        }
      ]
    }
  ]
}